--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,11 +1,7 @@
 <div>
   
-    <main>
-      <section class="relative w-full h-full py-40 min-h-screen">
-        <div
-          class="absolute top-0 w-full h-full bg-blueGray-800 bg-no-repeat bg-full"
-          style="background-image: url('assets/img/register_bg_2.png')"
-        ></div>
+    <main data-theme="acid">
+      <section class="relative w-full h-full py-40 ">
         <router-outlet></router-outlet>
         
       </section>
