--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body class="bg-white font-family-karla h-screen">
+<body class=" font-family-karla h-screen" data-theme="acid">
 
     <div class="w-full flex flex-wrap">
 
@@ -45,7 +45,7 @@
                     <input type="submit" value="Log In" class="bg-black text-white font-bold text-lg hover:bg-gray-700 p-2 mt-8">
                 </form>
                 <div class="text-center pt-12 pb-12">
-                    <p>Don't have an account? <a routerLink="/register" class="underline font-semibold">Register here.</a></p>
+                    <p>Don't have an account? <a routerLink="/auth/register" class="underline font-semibold">Register here.</a></p>
                 </div>
             </div>
 
