--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div>
   
-    <main data-theme="acid">
+    <main data-theme="business">
       <section class="relative w-full h-full py-40 ">
         <router-outlet></router-outlet>
         
