--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,21 @@
 
 <app-navbar></app-navbar>
+<!--Banner-->
+<div class="p-6 py-12 dark:bg-violet-400 dark:text-gray-900">
+	<div class="container mx-auto">
+		<div class="flex flex-col lg:flex-row items-center justify-between">
+			<h2 class="text-center text-6xl tracking-tighter font-bold">Up to
+				<br class="sm:hidden">50% Off
+			</h2>
+			<div class="space-x-2 text-center py-2 lg:py-0">
+				<span>Plus free shipping! Use code:</span>
+				<span class="font-bold text-lg">MAMBA</span>
+			</div>
+			<a href="#" rel="noreferrer noopener" class="px-5 mt-4 lg:mt-0 py-3 rounded-md border block dark:bg-gray-50 dark:text-gray-900 dark:border-gray-400">Shop Now</a>
+		</div>
+	</div>
+</div>
+<!--Hero-->
 <div data-theme="light">
     <div class="hero min-h-screen" style="background-image: url();">
         <div class="hero-overlay bg-opacity-60"></div>
