--- a/src/app/layouts/shop/shop.component.html
+++ b/src/app/layouts/shop/shop.component.html
@@ -1,10 +1,9 @@
+
 <div>
-  
-    <main data-theme="business">
+  <app-user-navbar></app-user-navbar>
+    <main data-theme="bumblebee">
       <section class="relative w-full h-full py-40 ">
         <router-outlet></router-outlet>
       </section>
     </main>
-    
   </div>
-  
