--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -30,27 +30,39 @@
 
             <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
                 <p class="text-center text-3xl">Join Us.</p>
-                <form class="flex flex-col pt-3 md:pt-8" onsubmit="event.preventDefault();">
+                <form class="flex flex-col pt-3 md:pt-8" action="" (ngSubmit)="register()" >
                     <div class="flex flex-col pt-4">
-                        <label for="name" class="text-lg">Name</label>
-                        <input type="text" id="name" placeholder="John Smith" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                        <label for="name" class="text-lg text-black">Name</label>
+                        <input type="text" id="name" name="name" [(ngModel)]="name" placeholder="Fullname" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                    </div>
+
+                    <div class="flex flex-col pt-4">
+                        <label for="name" class="text-lg">Username</label>
+                        <input type="text" id="username" [(ngModel)]="username" name="username"  placeholder="Username" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
                     </div>
 
                     <div class="flex flex-col pt-4">
                         <label for="email" class="text-lg">Email</label>
-                        <input type="email" id="email" placeholder="your@email.com" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                        <input type="email" id="email" [(ngModel)]="email" name="email"  placeholder="your@email.com" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
                     </div>
-    
                     <div class="flex flex-col pt-4">
                         <label for="password" class="text-lg">Password</label>
-                        <input type="password" id="password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                        <input type="password" name="password" [(ngModel)]="password" id="password"  placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
                     </div>
 
                     <div class="flex flex-col pt-4">
                         <label for="confirm-password" class="text-lg">Confirm Password</label>
-                        <input type="password" id="confirm-password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                        <input type="password" name="confirmPassword"  id="confirm-password" [(ngModel)]="passwordConfirm" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-white  mt-1 leading-tight focus:outline-none focus:shadow-outline" />
                     </div>
     
+                    <div class="flex flex-col pt-4">
+                        <label for="name" class="text-lg">Address</label>
+                        <input type="text" id="address" [(ngModel)]="address" name="address" placeholder="Address" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                    </div>
+                    <div class="flex flex-col pt-4">
+                        <label for="name" class="text-lg">Phone</label>
+                        <input type="text" id="phone" [(ngModel)]="phone" name="phone" placeholder="Phone Number" class="shadow appearance-none border rounded w-full py-2 px-3 text-white mt-1 leading-tight focus:outline-none focus:shadow-outline" />
+                    </div>
                     <input type="submit" value="Register" class="bg-black text-white font-bold text-lg hover:bg-gray-700 p-2 mt-8" />
                 </form>
                 <div class="text-center pt-12 pb-12">
