--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,68 +1,94 @@
+<div class=" py-6 sm:py-8 lg:py-12">
+    <div class="mx-auto max-w-screen-lg px-4 md:px-8">
+      <div class="mb-6 sm:mb-10 lg:mb-16">
+        <h2 class="mb-4 text-center text-2xl font-bold text-gray-800 md:mb-6 lg:text-3xl">Your Cart</h2>
+      </div>
+  
+      <div class="mb-5 flex flex-col sm:mb-8 sm:divide-y sm:border-t sm:border-b">
+        <!-- product - start -->
+        <div class="py-5 sm:py-8" *ngFor="let item of cartItems; let i = index">
+          <div class="flex flex-wrap gap-4 sm:py-2.5 lg:gap-6">
+            <div class="sm:-my-2.5">
+              <a  routerLink="/home/shop/products/{{item.product.id}}" class="group relative block h-40 w-24 overflow-hidden rounded-lg sm:h-56 sm:w-40">
+                <img src="{{item.product.imageUrl }}"  alt="..." class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+              </a>
+            </div>
+  
+            <div class="flex flex-1 flex-col justify-between">
+              <div>
+                <a href="#" class="mb-1 inline-block text-lg font-bold text-gray-200 transition duration-100 hover:text-gray-500 lg:text-xl">{{item.product.name}}</a>
+  
+                <span class="block text-gray-500">Added On : {{item.addedOn | date: 'MM/dd/YYYY'}}</span>
+               
+              </div>
+  
+              <div>
+                <span class="mb-1 block font-bold text-gray-200 md:text-lg"> Price : ${{item.product.price | number: '1.2-2'}}</span>
+  
+                <span class="flex items-center gap-1 text-sm text-gray-500">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                  </svg>
+  
+                  In stock
+                </span>
+              </div>
+            </div>
+  
+            <div class="flex w-full justify-between border-t pt-4 sm:w-auto sm:border-none sm:pt-0">
+              <div class="flex flex-col items-start gap-2">
+                <div class="flex h-12 w-20 overflow-hidden rounded border">
+                    <p  class="w-full px-4 py-2 outline-none ring-inset ring-indigo-300 transition duration-100 focus:ring" style="margin-right: 1rem;">{{ item.quantity }}</p>   
+  
+                  <div class="flex flex-col divide-y border-l">
+                    <button class="flex w-6 flex-1 select-none items-center justify-center bg-white leading-none transition duration-100 hover:bg-gray-100 active:bg-gray-200" (click)="increaseQuantity(item)">+</button>
+                    <button class="flex w-6 flex-1 select-none items-center justify-center bg-white leading-none transition duration-100 hover:bg-gray-100 active:bg-gray-200" (click)="decreaseQuantity(item)" >-</button>
+                  </div>
+                </div>
+  
+                <button class="select-none text-sm font-semibold text-indigo-500 transition duration-100 hover:text-indigo-600 active:text-indigo-700">Delete</button>
+              </div>
+  
+              <div class="ml-4 pt-3 sm:pt-2 md:ml-8 lg:ml-16">
+                <span class="block font-bold text-gray-800 md:text-lg">${{getTotal() | number: '1.2-2'}}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+  
+        <!-- product - start -->
+      
+        <!-- product - end -->
+      </div>
+  
+      <!-- totals - start -->
+      <div class="flex flex-col items-end gap-4">
+        <div class="w-full rounded-lg bg-gray-100 p-4 sm:max-w-xs">
+          <div class="space-y-1">
+  
+            <div class="flex justify-between gap-4 text-gray-500">
+              <span>Shipping</span>
+              <span>$4.99</span>
+            </div>
+          </div>
+  
+          <div class="mt-4 border-t pt-4">
+            <div class="flex items-start justify-between gap-4 text-gray-800">
+              <span class="text-lg font-bold">Total</span>
+  
+              <span class="flex flex-col items-end">
+                <span class="text-lg font-bold">${{getTotal() | number: '1.2-2'}}</span>
+                <span class="text-sm text-gray-500">including VAT</span>
+              </span>
+            </div>
+          </div>
+        </div>
+  
+        <button class="inline-block rounded-lg bg-indigo-500 px-8 py-3 text-center text-sm font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-indigo-600 focus-visible:ring active:bg-indigo-700 md:text-base">Check out</button>
+      </div>
+      <!-- totals - end -->
+    </div>
+  </div>
 
-<div class="mx-5" style="margin-top: 5rem;">
-    <style>
-        table * {
-            color: white;
-            border: none;
-        }
-    </style>
-    <h1>Cart</h1>
-    <table class="table mt-5">
-        <thead style="background-color: #fff2; border: none;" class="mb-5">
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Price</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Date Added to Cart</th>
-            <th scope="col">Total</th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let item of cartItems; let i = index">
-            <tr>
-                <th scope="row" routerLink="/shop/products/{{item.product.id}}">{{item.product.name}}</th>
-                <td>${{item.product.price | number: '1.2-2'}}</td>
-                <td>
-                    <div class="d-flex" style="align-items: center;">
-                        <p style="margin-right: 1rem;">{{ item.quantity }}</p>
-                        <button class="bg-transparent">
-                            <fa-icon 
-                            [icon]="caretDown" 
-                            [style.color]="'#faa'" 
-                            class="mx-1" 
-                            size="2x"
-                            (click)="decreaseQuantity(item)"
-                        ></fa-icon>
-                        </button>
-                        <button class="bg-transparent">
-                            <fa-icon 
-                            [icon]="caretUp" 
-                            [style.color]="'#afa'" 
-                            class="mx-1" 
-                            size="2x"
-                            (click)="increaseQuantity(item)"
-                        ></fa-icon>
-                        </button>
-                    </div>
-                </td>
-                <td>{{item.addedOn | date: 'MM/dd/YYYY'}}</td>
-                <td>${{item.totalPrice | number: '1.2-2'}}</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><h4 class="text-success font-weight-bold">${{getTotal() | number: '1.2-2'}}</h4></td>
-              </tr>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><button class="btn btn-success" *ngIf="cartItems">Checkout</button></td>
-              </tr>
-        </tbody>
-    </table>
-</div>
+  
