--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,35 +1,28 @@
-<div style="margin-top: 5rem;">
-    <style>
-        .product-img-container {
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-image: url("../../../assets/static/images/product-placeholder.png");
-            width: 100%;
-            height: 250px;
-        }
-    </style>
-    <h1 class="mx-auto text-center" style="margin-bottom: 6rem;">Our Products</h1>
-    <div class="d-flex" style="justify-content: center; flex-wrap: wrap;">
-        <div *ngFor="let product of products; let i = index">
-            <div 
-                style="width: 300px;"
-                class="mx-5 my-3"
-                *ngIf="product.name.toLowerCase().includes(term.toLowerCase())" >
-                <h6 
-                    style="background-color: #fff5; border-radius: 0 10px 0 0;" 
-                    class="m-0 py-2 px-2"
-                >{{ product.name }}</h6>
-                <div class="product-img-container" [style.backgroundImage]="'url(' + product.imageUrl + ')'"></div>
-                <div 
-                    style="background-color: #fff1; justify-content: space-between; align-items: center;" 
-                    class="p-3 d-flex"
-                >
-                    <h3>${{ product.price | number : '1.2-2' }}</h3>
-                    <a routerLink="/shop/products/{{ product.id }}" class="btn btn-success">Go</a>
-                </div>
-            </div>
-        </div>
-    </div>
+
     
-</div>
+  
+    <h1 class="mx-auto text-center" style="margin-bottom: 6rem;">Highlighted Products</h1>
+  
+    <swiper [slidesPerView]="4" [spaceBetween]="1" class="mySwiper">
+      <ng-template swiperSlide *ngFor="let product of products; let i = index">
+        <div class="swiper-slide">
+          <div class="relative w-28 sm:w-32 md:w-40 lg:w-48 xl:w-56 2xl:w-64 bg-base-100 shadow-xl hover:shadow-lg hover:translate-x-3 hover:bg-lightBlue-200 transition duration-500 ease-in-out" routerLink="/shop/products/{{ product.id }}">
+            <figure>
+              <img src="{{ product.imageUrl }}" alt="Product"  />
+            </figure>
+            <div class="absolute inset-0 opacity-0 hover:opacity-100 bg-white bg-opacity-40 backdrop-blur p-4 transition duration-500 ease-in-out">
+              <h3 class="mb-2 text-xl font-semibold text-gray-800">{{ product.name }}</h3>
+              <p class="text-sm text-black">{{product.description}}</p>
+              <div class="card-actions justify-between mt-2">
+                <div class="badge badge-outline text-xs text-gray-800 bg-teal-400 uppercase">${{ product.price | number : '1.2-2' }}</div>
+                <div class="rating">
+                  <!-- Rating stars -->
+                </div>
+                <button class="btn btn-sm btn-outline btn-primary mt-2 text-teal-600 bg-indigo-600" routerLink="/home/shop/products/{{ product.id }}" >Details</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+    </swiper>
+  
