--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,1 +1,62 @@
-<p>user-detail works!</p>
+<div>
+
+    <section class="pt-16 bg-blueGray-50">
+        <div class="w-full lg:w-4/12 px-4 mx-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
+            <div class="px-6">
+              <div class="flex flex-wrap justify-center">
+                <div class="w-full px-4 flex justify-center">
+                  <div class="relative">
+                    <img alt="..." src="../../../assets/img/team-1-800x800.jpg" class="shadow-xl rounded-full h-auto align-middle border-none mt-4">
+                    
+                  </div>
+                </div>
+                <div class="w-full px-4 text-center mt-20">
+           
+                </div>
+              </div>
+              <div class="text-center mt-12">
+                <h3 class="text-xl font-semibold leading-normal mb-2 text-blueGray-400 mb-2">
+                    {{ user.name }}
+                </h3>
+                <i class="fas fa-user-circle mr-2 text-lg text-black "></i>
+                <h5 class="text-muted">{{ user.username }} &#xb7; {{ user.email }}</h5>
+                     
+                <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
+                  <i class="fas fa-map-marker-alt mr-2 text-lg text-black"></i>
+                  {{ user.address }}
+                </div>
+                <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
+                    <i class="fas fa-phone t mr-2 text-lg text-black"></i>
+                    +216-{{ user.phone }}
+                  </div>
+                <div class="mb-2 text-blueGray-600 mt-10">
+                  <i class="fas fa-shopping-cart mr-2 text-lg text-black"></i>
+                  {{ user.cartItems.length }} 
+                </div>
+                <div class="mb-2 text-blueGray-600">
+                  <i class="fas fa-user mr-2 text-lg text-black"></i>
+                 
+                  <a routerLink="/home/settings">Account Settings</a>
+             
+                </div>
+              </div>
+              <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+                <div class="flex flex-wrap justify-center">
+              
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer class="relative  pt-8 pb-6 mt-8">
+          <div class="container mx-auto px-4">
+            <div class="flex flex-wrap items-center md:justify-between justify-center">
+              <div class="w-full md:w-6/12 px-4 mx-auto text-center">
+              
+              </div>
+            </div>
+          </div>
+        </footer>
+        </section>
+    </div>
