--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import "~swiper/swiper-bundle.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
