--- a/src/app/components/user-navbar/user-navbar.component.html
+++ b/src/app/components/user-navbar/user-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100" data-theme="acid">
+<div class="navbar bg-base-100" data-theme="night">
     <div class="flex-1">
       <a class="btn btn-ghost normal-case text-xl" routerLink="/home/shop">Shop</a>
     </div>
