--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,6 +1,6 @@
-<div>
+<div data-theme="acid">
   
-    <main data-theme="business">
+    <main>
       <section class="relative w-full h-full py-40 ">
         <router-outlet></router-outlet>
       </section>
