--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,7 +39,7 @@
     
                     <div class="flex flex-col pt-4">
                         <label for="password" class="text-lg">Password</label>
-                        <input type="password" name="password" id="password" [(ngModel)]="password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline">
+                        <input type="password" name="password" id="password" [(ngModel)]="password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-black mt-1 leading-tight focus:outline-none focus:shadow-outline">
                     </div>
     
                     <input type="submit" value="Log In" class="bg-black text-white font-bold text-lg hover:bg-gray-700 p-2 mt-8">
