--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,37 +1,37 @@
-<nav id="header" class="fixed w-full z-30 top-0 text-gray-800 opacity-60" data-theme="light">
-    <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
-      <div class="pl-4 flex items-center">
-        <a class="toggleColour text-gray-800 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-          <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
-            <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" />
-            <path class="doctor-icon" d=" M 510.7 189.151 C 505.271 168.95 484.565 156.956 464.365 162.385 L 330.156 198.367 L 155.924 35.878 L 107.19 49.008 L 211.729 230.183 L 86.232 263.767 L 36.614 224.754 L 0 234.603 L 45.957 314.27 L 65.274 347.727 L 105.802 336.869 L 240.011 300.886 L 349.726 271.469 L 483.935 235.486 C 504.134 230.057 516.129 209.352 510.7 189.151 Z " />
-          </svg>
-          ShopX
-        </a>
-      </div>
-      <div class="block lg:hidden pr-4">
-        <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-          <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <title>Menu</title>
-            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-          </svg>
-        </button>
-      </div>
-      <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-white p-4 lg:p-0 z-20" id="nav-content">
-        <ul class="list-reset lg:flex justify-end flex-1 items-center">
-            <li class="mr-3 relative">
-                <a class="inline-block text-gray-500 no-underline hover:text-black hover:underline py-2 px-4" href="#">Service</a>
-              </li>
-          <li class="mr-3">
-            <a class="inline-block text-gray-600 no-underline hover:text-black  hover:underline py-2 px-4" href="#">About</a>
-          </li>
-         
-          <li class="mr-3">
-            <a class="inline-block text-gray-600 no-underline hover:text-black  hover:underline py-2 px-4" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
+<header class="mb-8 border-b">
+  <div class="mx-auto flex max-w-screen-2xl items-center justify-between px-4 md:px-8">
+  <!-- logo - start -->
+  <a href="/" class="text-black-800 inline-flex items-center gap-2.5 text-2xl font-bold md:text-3xl" aria-label="logo">
+    <svg width="95" height="94" viewBox="0 0 95 94" class="h-auto w-6 text-indigo-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <path d="M96 0V47L48 94H0V47L48 0H96Z" />
+    </svg>
+
+    WatchShop
+  </a>
+  <!-- logo - end -->
+
+  <!-- nav - start -->
+  <nav class="hidden gap-12 lg:flex 2xl:ml-16">
+    <a href="#" class="text-lg font-semibold text-indigo-500">Home</a>
+    <a href="#" class="text-lg font-semibold text-gray-600 transition duration-100 hover:text-indigo-500 active:text-indigo-700">About</a>
   </nav>
-  
+  <!-- nav - end -->
+
+  <!-- buttons - start -->
+  <div class="flex divide-x border-r sm:border-l">
+    
+
+    <a  routerLink="/auth/register" class="flex h-12 w-12 flex-col items-center justify-center gap-1.5 transition duration-100 hover:bg-gray-100 active:bg-gray-200 sm:h-20 sm:w-20 md:h-24 md:w-24">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+    </svg>
+
+    <span class="hidden text-xs font-semibold text-gray-500 sm:block" >Join us </span>
+    </a>
+
+   
+   
+  </div>
+  <!-- buttons - end -->
+  </div>
+</header>
