--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -25,7 +25,7 @@
         <div class="w-full md:w-1/2 flex flex-col">
 
             <div class="flex justify-center md:justify-start pt-12 md:pl-12 md:-mb-12">
-                <a  class="bg-black text-white font-bold text-xl p-4" alt="Logo">Logo</a>
+                <img src="assets/img/logo.JPG" alt="Logo" style="width: 150px; height: auto; box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);">
             </div>
 
             <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
@@ -74,7 +74,7 @@
 
         <!-- Image Section -->
         <div class="w-1/2 shadow-2xl">
-            <img class="object-cover w-full h-screen hidden md:block" src="https://source.unsplash.com/IXUM4cJynP0" alt="Background" />
+            <img class="object-cover w-full h-screen hidden md:block" src="assets\img\wt.avif" alt="Background" />
         </div>
     </div>
 
