--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,18 +10,18 @@
 	<section class="mx-auto max-w-screen-2xl px-4 md:px-8">
 	  <div class="mb-8 flex flex-wrap justify-between md:mb-16">
 		<div class="mb-6 flex w-full flex-col justify-center sm:mb-12 lg:mb-0 lg:w-1/3 lg:pt-48 lg:pb-24">
-		  <h1 class="text-black-800 mb-4 text-4xl font-bold sm:text-5xl md:mb-8 md:text-6xl">Find your<br />style online</h1>
+		  <h1 class="text-black-800 mb-4 text-4xl font-bold sm:text-5xl md:mb-8 md:text-6xl">Find your<br />Watchs online</h1>
   
-		  <p class="max-w-md leading-relaxed text-gray-500 xl:text-lg">This is a section of some simple filler text, also known as placeholder text. It shares characteristics of real text.</p>
+		  
 		</div>
   
 		<div class="mb-12 flex w-full md:mb-16 lg:w-2/3">
 		  <div class="relative top-12 left-12 z-10 -ml-12 overflow-hidden rounded-lg bg-gray-100 shadow-lg md:top-16 md:left-16 lg:ml-0">
-			<img src="https://images.unsplash.com/photo-1542340916-951bb72c8f74?auto=format&q=75&fit=crop&w=550&h=550" loading="lazy" alt="Photo by Kaung Htet" class="h-full w-full object-cover object-center" />
+			<img src="assets\img\watch1.avif" loading="lazy" alt="Photo by Kaung Htet" class="h-full w-full object-cover object-center" />
 		  </div>
   
 		  <div class="overflow-hidden rounded-lg bg-gray-100 shadow-lg">
-			<img src="https://images.unsplash.com/photo-1586295166487-b265f7e83a7f?auto=format&q=75&fit=crop&w=550&h=550" loading="lazy" alt="Photo by Manny Moreno" class="h-full w-full object-cover object-center" />
+			<img src="assets\img\watch2.avif" loading="lazy" alt="Photo by Manny Moreno" class="h-full w-full object-cover object-center" />
 		  </div>
 		</div>
 	  </div>
@@ -38,7 +38,7 @@
 	  <div class="mb-10 md:mb-16">
 		<h2 class="mb-4 text-center text-2xl font-bold text-gray-800 md:mb-6 lg:text-3xl">Selected</h2>
   
-		<p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg">This is a section of some simple filler text, also known as placeholder text. It shares some characteristics of a real written text but is random or otherwise generated.</p>
+		
 	  </div>
 	  <!-- text - end -->
   
@@ -46,7 +46,7 @@
 		<!-- product - start -->
 		<div>
 		  <a href="#" class="group relative mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-			<img src="https://images.unsplash.com/photo-1552374196-1ab2a1c593e8?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+			<img src="assets\img\watch4.jpeg" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
   
 			<div class="absolute left-0 bottom-2 flex gap-2">
 			  <span class="rounded-r-lg bg-red-500 px-3 py-1.5 text-sm font-semibold uppercase tracking-wider text-white">-50%</span>
@@ -56,8 +56,8 @@
   
 		  <div class="flex items-start justify-between gap-2 px-2">
 			<div class="flex flex-col">
-			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Fancy Outfit</a>
-			  <span class="text-gray-500">by Fancy Brand</span>
+			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Fancy Watch</a>
+			  <span class="text-gray-500">by ROLEX</span>
 			</div>
   
 			<div class="flex flex-col items-end">
@@ -71,12 +71,12 @@
 		<!-- product - start -->
 		<div>
 		  <a href="#" class="group relative mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-			<img src="https://images.unsplash.com/photo-1523359346063-d879354c0ea5?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Nick Karvounis" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+			<img src="assets\img\watch5.jpeg" loading="lazy" alt="Photo by Nick Karvounis" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
 		  </a>
   
 		  <div class="flex items-start justify-between gap-2 px-2">
 			<div class="flex flex-col">
-			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Cool Outfit</a>
+			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Cool Watch</a>
 			  <span class="text-gray-500">by Cool Brand</span>
 			</div>
   
@@ -90,12 +90,12 @@
 		<!-- product - start -->
 		<div>
 		  <a href="#" class="group relative mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-			<img src="https://images.unsplash.com/photo-1548286978-f218023f8d18?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+			<img src="assets\img\watch6.jpeg" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
 		  </a>
   
 		  <div class="flex items-start justify-between gap-2 px-2">
 			<div class="flex flex-col">
-			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Nice Outfit</a>
+			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Nice Watch</a>
 			  <span class="text-gray-500">by Nice Brand</span>
 			</div>
   
@@ -109,12 +109,12 @@
 		<!-- product - start -->
 		<div>
 		  <a href="#" class="group relative mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-			<img src="https://images.unsplash.com/photo-1566207274740-0f8cf6b7d5a5?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Vladimir Fedotov" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+			<img src="assets\img\watch7.jpeg" loading="lazy" alt="Photo by Vladimir Fedotov" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
 		  </a>
   
 		  <div class="flex items-start justify-between gap-2 px-2">
 			<div class="flex flex-col">
-			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Lavish Outfit</a>
+			  <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Lavish Watch</a>
 			  <span class="text-gray-500">by Lavish Brand</span>
 			</div>
   
@@ -137,7 +137,7 @@
 		<div class="flex w-full flex-col p-4 sm:w-1/2 sm:p-8 lg:w-2/5">
 		  <h2 class="mb-4 text-xl font-bold text-white md:text-2xl lg:text-4xl">Summer Sale<br />Up to 70% off.</h2>
   
-		  <p class="mb-8 max-w-md text-gray-400">This is a section of some simple filler text, also known as placeholder text. It shares some characteristics of a real written text.</p>
+		  
   
 		  <div class="mt-auto">
 			<a href="#" class="inline-block rounded-lg bg-white px-8 py-3 text-center text-sm font-semibold text-gray-800 outline-none ring-indigo-300 transition duration-100 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:text-base">Save now</a>
@@ -147,7 +147,7 @@
   
 		<!-- image - start -->
 		<div class="order-first h-48 w-full bg-gray-700 sm:order-none sm:h-auto sm:w-1/2 lg:w-3/5">
-		  <img src="https://images.unsplash.com/photo-1505846951821-e25bacf2eccd?auto=format&q=75&fit=crop&crop=top&w=1000&h=500" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
+		  <img src="assets\img\watch8.jpg" loading="lazy" alt="Photo by Dom Hill" class="h-full w-full object-cover object-center" />
 		</div>
 		<!-- image - end -->
 	  </div>
